@@ -1,3 +1,8 @@
+2010-12-06  kitone  <kitone@gna.org>
+
+	* plugins/subtitleformats/subtitleeditorproject/subtitleeditorproject.cc:
+	Fix bug #17231 : Opening SEP project wont open a Keyframes file automatically.
+
 2010-11-10  kitone  <kitone@gna.org>
 
 	* plugins/actions/adjusttime/adjusttime.cc:
